libplist (1.8-2) UNRELEASED; urgency=low

  * debian/control:
   - Replace build-depends on swig by cython, to enable python bindings made
     by cython.
  * debian/python-plist.install:
   - Update files installed by cython.
  * debian/libplist++-dev.install:
   - Remove the swig files.

 -- Julien Lavergne <gilir@ubuntu.com>  Fri, 20 Jul 2012 01:50:19 +0200

libplist (1.8-1) unstable; urgency=low

  * New upstream release.

 -- Julien Lavergne <julien.lavergne@gmail.com>  Fri, 13 Jan 2012 20:52:44 +0100

libplist (1.7-1) unstable; urgency=low

  * New upstream release.
  * debian/rules:
   - Run tests on all arches. 
  * debian/README.Debian:
   - Remove, since tests suit runs on all arches.
  * debian/copyright:
   - Fix DEP5 format.

 -- Julien Lavergne <julien.lavergne@gmail.com>  Mon, 10 Oct 2011 00:06:15 +0200

libplist (1.6-2) unstable; urgency=medium

  * debian/README.Debian :
   - Add to mention supported archs.
  * debian/rules:
   - Only run the test suit on supported archs. (Closes: #633457).

 -- Julien Lavergne <julien.lavergne@gmail.com>  Sat, 23 Jul 2011 14:48:59 +0200

libplist (1.6-1) unstable; urgency=low

  * New upstream release.
  * 04-Add-missing-include-cstddef-to-fix-FTBFS-with-GCC-4-6.patch:
   - Remove, merged upstream.
  * debian/control:
   - Remove build-depends and depends of libglib2.0-dev.
   - Add DM-Upload-Allowed: yes
   - Build-depends on cmake (>= 2.8.4) for building the correct python
     extension.
  * debian/copyright:
   - Update copyright holders.
  * debian/libplist1.symbols:
   - Add new symbols.
  * debian/rules:
   - Clean generated files by the tests (Closes: #632057)
   - Build the correct python extension. Thanks Jakub Wilk for the patch.
     (Closes: #632056)

 -- Julien Lavergne <julien.lavergne@gmail.com>  Sun, 03 Jul 2011 22:00:50 +0200

libplist (1.4-2) unstable; urgency=low

  * debian/control:
   - Add references to iDevices and some examples.
   - Update Maintainer field, and add me to Uploaders.