@@ -31,6 +31,13 @@ override_dh_auto_build:
 override_dh_install:
 	mv $(CURDIR)/debian/tmp/usr/bin/plutil-* \
 		$(CURDIR)/debian/tmp/usr/bin/plutil
+
+	# Remove files generated by swig
+	rm -f $(CURDIR)/debian/tmp/usr/include/plist/swig/plist.i
+	rm -f $(CURDIR)/debian/tmp/usr/lib/python*/*-packages/plist/plist.py
+	rm -f $(CURDIR)/debian/tmp/usr/lib/python*/*-packages/plist/__init__.py
+	rm -f $(CURDIR)/debian/tmp/usr/lib/python*/*-packages/plist/_plist.so
+
 	dh_install --fail-missing
 
 override_dh_python2:
