@@ -7,6 +7,8 @@ libplist (1.8-2) UNRELEASED; urgency=low
    - Update files installed by cython.
   * debian/libplist++-dev.install:
    - Remove the swig files.
+  * debian/rules:
+   - Remove files generated by swig.
 
  -- Julien Lavergne <gilir@ubuntu.com>  Fri, 20 Jul 2012 01:50:19 +0200
 
